# Zelopack-funcional-Pc

./: .env  .gitignore  .replit  app.py  app_minimal.py  app_simple.py  auto_check.py  build_executable.bat  build_executable.sh  cleanup.py  cookies.txt  create_tables.py  dependencies.txt  editor.py  extensions.py  generate_icon.py  init_db.py  main.py  models.py  models_temp.py  pyproject.toml  relatorio_testes.txt  reset_admin_password.py  run_background_checker.py  scriptsgenerate_missing_templates.py.txt  sync_database.py  technical.py  test_connection.py  test_db.py  test_system.py  test_zelopack.py  update_db.py  zelopack_app.py
Uploads/: fornecedores.csv
attached_assets/: Pasted--1-Produ-o-200-Descri-o-Determina-o-peso-l-quido-de-embalagens-de-200g-subtraindo-a-tara-peso-1745585375994.txt  Pasted--Arquivo-InterfaceCompletaCalculos-html-Descricao-Interface-moderna-e-interativa-contendo-to-1745584559883.txt  Pasted-1-Produ-o-200-Descri-o-Determina-o-peso-l-quido-de-embalagens-de-200g-subtraindo-a-tara-peso-d-1745584542126.txt  Pasted-1-Tipografia-e-Estilo-Geral-Use-uma-fonte-moderna-e-clara-como-Inter-Poppins-ou-Roboto-Aplique-1745579420899.txt  Pasted-Documento-nico-e-Completo-do-Projeto-Zelopack-Atualizado-1-Introdu-o-Este-documento-cont-m-a-im-1745987112850.txt  Pasted-Estrutura-e-Funcionalidades-Principais-1-Sistema-de-Autentica-o-e-Login-de-Usu-rios-M-dulo-seg-1745558940038.txt  Pasted-N-C-lculo-F-rmula-Entradas-Sa-da-1-Produ-o-Final-200-Produ-o-final-Peso-liquido-Perdas-Pes-1745999317155.txt  (+1 more)
instance/: zelopack.db
templates/: base.html  editor.html  (+3 more)
(+117 files in other folders)
